[package]
name = "rust-opengl-sdl2-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beryllium = "0.9.0"
bytemuck = "1.13.0"
fermium = "22401.1.0"
gl33 = "0.2.1"

[dev-dependencies]
imagine = "0.4.0"
